# QuickBBS

./: .gitignore  CLAUDE.md  Past_Versions.md  README.md  Version_notes.md  db.sqlite3  format_code.sh  generate_certs.command  htmx_improvements.md  indexdata-refactor.md  license.txt  mermaid_charts.txt  old-pyproject.toml  preqs and installation.txt  pylintrc  pyproject.toml  pytest.ini  requirements.txt  setup.py  start_django_ai_boost.sh
.github/workflows/: codeql-analysis.yml
app/: 08_28_2015_profile  LICENSE  Makefile  README.md  To Do.txt  bread.py  cheetah_common.py  comics.py  common.py  config.py  core_plugin.py  directory_caching_test.py  gallery.py  htpasswd  make.bat  plugin_mgr.py  profile.prof  profile_out.txt  profile_snapshot_8_23_2015_14_27  profile_snapshot_8_23_2015_22_33  profile_snapshot_8_23_2015_22_37  profile_snapshot_8_23_21_48  requirements  server-test.py  server.py  server3.py  setup.py  statusbar.py  test_directory_archives.txt  time_test.py  tnail_services.py  url scheme.txt  webguard-htpasswd.py
app/Next Stage/: unified.py
app/apidoc/: bread.rst  cheetah_common.rst  comics.rst  conf.py  directory_caching.rst  directory_caching_test.rst  filetypes.rst  index.rst  natsort.rst  natsort.tests.rst  rarfile.rst  scandir.rst  thumbnail_services.rst  time_test.rst  twist_server_2.rst
app/directory_caching/: __init__.py  archives.py  directory_caching_test.py
app/directory_caching.old/: __init__.py  archives2.py
app/plugins/: BMP_Parser.py  DIR_Parser.py  GIF_Parser.py  GIF_Parser.yapsy-plugin  HTML_Parser.py  HTML_Parser.yapsy-plugin  JPG_Parser.py  MARKDOWN_Parser.py  PDF_Parser.py  PNG_Parser.py  TXT_Parser.py  core_plugin.py  eps_parser.py  im_parser.py  msp_parser.py  msp_parser.yapsy-plugin  pcx_parser.py  ppm_parser.py  tiff_parser.py  zip_parser.py
app/semantic_url/: __init__.py
app/source/: conf.py  index.rst
app/templates/: archive_item_view.html  archive_listing.html  base.html  gallery_base.html  gallery_listing.html  login_greeting.html  logout_greeting.html  single_item_view.html
app/txbonjour/: __init__.py  discovery.py  service.py  tap.py
benchmarks/: .txt  05-02-2016_home.txt  05-02-2016_home_perf.txt  05_15_2016_home.txt  05_15_2016_home_perf.txt  05_15_2016a_home.txt  05_15_2016a_home_perf.txt  05_15_2016b.txt  05_15_2016b_perf.txt  06-01-2016_home_django.txt  08_25_2015-cw.txt  08_25_2015-cw_perf.txt  4_10_2015.txt  4_15_2015.txt  4_15_2015c.txt  4_3_2015.txt  4_4_2015.txt  4_9_2015.txt  6_8_2015a-ab.txt  6_8_2015a-ab_perf.txt  7_31_2015.txt  7_31_2015_perf.txt  8_25_2015a-h.txt  8_25_2015a-h_perf.txt  8_25_2015a-w.txt  8_25_2015a-w_perf.txt  8_25_2015b-w.txt  8_25_2015b-w_perf.txt  8_25_2015c-h.txt  8_25_2015c-h_perf.txt  PYTHONIOENCODING=UTF-8.txt  _rate200.txt  benchmarks.sh  create_test_files.py  dj-benchmarks.sh
cfg/: filetypes.ini  gallery.passwdfile  paths.ini  settings.ini
cfgf/: paths.ini  settings.ini
directory_caching/: __init__.py  archives3.py  utilities.py.bak
django/: db.sqlite3
django/cfg/: paths.ini  settings.ini
django/directory_caching/: __init__.py  archives2.py  archives3.py  utilities.py
django/frontend/: __init__.py  thumbnail.py  urls.py  views.py  views.py.bak
django/quickbbs/: settings.py
django/thumbnailgen/: bmp_parser.py  html_parser.py  im_parser.py  ppm_parser.py  ppm_parser.yapsy-plugin  to do.txt
docs/: BENCHMARK_DOWNLOADS.md  DATABASE_ERD.md  Links & Aliases.md  MEMO_POSTGRESQL_CASE_SENSITIVITY.md  OPTIMIZATION_CHANGES_IMPLEMENTED.md  QuickBBS.md  VERSION_CHANGE_PROCESS.md  Version History.md  Web Servers.md  gallery_styles_reference.jinja  index.md  unused_files.md
docs/Next Stage/: unified.py
docs/design documents/: cache_watcher_design.md  filetypes_design.md  frontend_design.md  quickbbs_app_design.md  thumbnails_design.md
frontend/: __init__.py  config.py  tools.py  views.py
gallery/: comics.py  common.py  ftypes_paths.py  gallery.py  server3.py  tnail_services.py
gallery/templates/: archive_item_view.html  archive_listing.html  base.html  gallery_base.html  gallery_listing.html  index.html  single_item_view.html
quickbbs/: 20191019_requirements.txt  20191019_requirements.txt.txt  20191025_requirements.txt  20200431_requirements.txt  20201221_requirements.txt  20210104_requirements.txt  BENCHMARK_DOWNLOADS.md  Copy a file on macOS with Python using native NSFileManager method which takes advantage of copy-on-….webloc  IndexDirs rename plan.md  Resolve macOS alias path in Python.webloc  __init__.py  benchmark_cache_watcher.py  benchmark_models.py  check_cache_status.py  chromewebdata_2025-11-04_20-32-54.report.html  chromewebdata_2025-11-04_20-33-25.report.html  chromewebdata_2025-11-04_20-35-12.report.html  conftest.py  conversions.py  db.sqlite3  diagnose_sync_issue.py  djangolint.command  file_count_benchmarks.py  flag_as_invalidated_any_folder_containing_aliases.py  force_rescan.sh  locustfile_downloads.py  manage.py  materialization_optimizations.md  methods to relocate.md  models.py  models.py refactor.md  new_graphics_benchmarks.py  new_watchdogmon_test.py  old_req.txt  piptree.txt  pylintrc  quickbbs.dot  rebuild-database.sh  refactoring-phase2.md  requirements.txt  (+18 more)
quickbbs/DirScanning/: scanner.py
quickbbs/benchmarks/: benchmark_dashboard.html  benchmark_models.py  compare_benchmark_results.py  create_test_files.py  hey_compare.py  run_download_benchmark.py  run_hey.sh
quickbbs/cache/: __init__.py  admin.py  apps.py  cached_exists.py  models.py  watchdog_test.py  watchdogmon.py
quickbbs/cache_watcher/: __init__.py  admin.py  apps.py  check_cache_status.py  django_watchdog.py  models.py  utilities.py  watchdogmon.py
quickbbs/cfg/: paths.ini  settings.ini
testing/: fs_counts.py  manage.py  mine_counts.py
thumbnailgend/: TXT_Parser.py
tools/: install_dependencies.sh  install_dependencies_py2.sh  install_dependencies_py3.sh  uninstall_dependencies.sh  uninstall_dependencies_py2.sh  uninstall_dependencies_py3.sh  upgrade_dependencies.sh  upgrade_dependencies_py2.sh  upgrade_dependencies_py3.sh
working/: outline.py
(+505 files in other folders)
