[project]
name = "QuickBBS"
version = "3.0.0"
authors = [
  { name="Benjamin Schollnick", email="Benjamin@schollnick.net" },
]
description = "Experimental Gallery / File Browser"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bschollnick/quickbbs"
Issues = "https://github.com/bschollnick/quickBBS/issues"

[black]
max-line-length = 120

[tool.pyright]
exclude = ["**/gallery/**", "**/albums/**"]

[tool.pylance]
exclude = ["**/gallery/**", "**/albums/**"]

[tool.mypy]
python_version = "3.13"
cache_dir = "/volumes/C-8tb/gallery/virtualenv"
explicit_package_bases = true
pretty = true
color_output = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "quickbbs.settings"

[tool.poetry]
name = "Quickbbs"
version = "3.0.0"
description = "Experimental Gallery / File Browser"
authors = ["Benjamin Schollnick <Benjamin@schollnick.net>"]
readme = "README.md"
packages = []

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.12"
aiofile = "^3.8.8"
aiopath = "^0.7.7"
django = "^5.1.3"
pymupdf = "^1.24.14"
django-icons = "^24.4"
django-htmx = "^1.21.0"
humanize = "^4.11.0"
django-jinja = "^2.11.0"
django-grappelli = "^4.0.1"
django-debug-toolbar = "^4.4.6"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
django-user-agents = "^0.4.0"
django-allauth = "^65.2.0"
watchdog = "^6.0.0"
django-extensions = "^3.2.3"
django-ranged-fileresponse = {git = "https://github.com/devmonkey22/django-ranged-fileresponse"}
pyav = "^14.0.1"
pillow = "^11.0.0"
markdown2 = "^2.5.1"
numpy = "^2.1.3"
django-thread = {git = "https://github.com/ross/django-thread"}
imagehash = "^4.3.1"
xattr = "^1.1.0"
dhash = "^1.4"
pathvalidate = "^3.2.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
natsort = "^8.4.0"
psycopg = {extras = ["c"], version = "^3.2.3"}
psycopg-pool = "^3.2.4"
certifi = "^2024.8.30"
gunicorn = "^23.0.0"
pip = "^24.3.1"
django-stubs = {extras = ["compatible-mypy"], version = "^5.1.1"}
types-pyyaml = "^6.0.12.20240917"
uvicorn = "^0.34.0"
pylint-django = "^2.6.1"
