[project]
name = "QuickBBS"
version = "3.99.0"
authors = [
  { name="Benjamin Schollnick", email="Benjamin@schollnick.net" },
]
description = "Experimental Gallery / File Browser"
readme = "README.md"
requires-python = ">=3.12,<3.15"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/bschollnick/quickbbs"
Issues = "https://github.com/bschollnick/quickbbs/issues"

[tool.black]
line-length = 150

[tool.pyright]
exclude = ["**/gallery/**", "**/albums/**"]

[tool.pylint]
max-line-length = 150

[tool.mypy]
python_version = "3.14"
explicit_package_bases = true
pretty = true
color_output = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]
exclude = ["^.*/albums/", "^.*/gallery/"]
mypy_path = "quickbbs"

[tool.django-stubs]
django_settings_module = "quickbbs.settings"

[tool.poetry]
name = "QuickBBS"
version = "3.99.0"
description = "Gallery & File Browser"

[tool.poetry.group.dev.dependencies]
locust = "^2.42.0"
httpx = {extras = ["http2"], version = "^0.28.1"}
black = "^26"
isort = ">=6.0.0"
pylint = "^4.0.5"
pylint-django = ">=2.6.1"
autoflake = "^2.3.1"
pytest = "^9.0.2"
pytest-django = "^4.11.1"
pytest-asyncio = "^1.3.0"
pip-audit = "^2.9.0"
pipdeptree = "^2.28.0"
django-stubs = "^6.0.0"
types-pyyaml = "^6.0.12.20240917"
django-debug-toolbar = "^6.0.0"

[tool.isort]
profile = "black"
src_paths = ["quickbbs"]
skip_gitignore = true
known_first_party = ["quickbbs", "frontend", "cache_watcher", "filetypes", "thumbnails"]

[tool.poetry.dependencies]
python = "^3.12,<3.15"
pymupdf = "^1.24.14"
django-icons = "^26"
django-htmx = "^1.21.0"
humanize = "^4.11.0"
django-jinja = "^2.11.0"
django-grappelli = "^5.0.0"
djangorestframework = "^3.15.2"
django-filter = "^25.1"
django-allauth = "^65.2.0"
watchdog = "^6.0.0"
django-extensions = "^4.1"
django-ranged-fileresponse = {git = "https://github.com/devmonkey22/django-ranged-fileresponse"}
pillow = "^12.1.1"
markdown2 = "^2.5.1"
numpy = "^2.1.3"
xattr = "^1.1.0"
natsort = ">=8.4.0"
psycopg = {extras = ["c"], version = "^3.2.3"}
gunicorn = ">=23.0.0"
uvicorn = ">=0.37.0"
hypercorn = ">=0.17.3"
django-compression-middleware = "^0.5.0"
more-itertools = "^11.0.2"
cachetools = "^7"
aiofiles = ">=24.1.0"
pyobjc-core = "^12.0"
# pyobjc = "^12.0"
pyobjc-framework-uniformtypeidentifiers = "^12.0"
pyobjc-framework-cocoa = "^12.0"
ffmpeg-python = "^0.2.0"
charset-normalizer = "^3.4.2"
django = "^6.0.3"
psycopg-pool = "^3.2.6"
django-dbbackup = "^5.0.0"
pyobjc-framework-scriptingbridge = "^12.0"
pyobjc-framework-quartz = "^12.0"
pyobjc-framework-fsevents = "^12.0"
pyobjc-framework-coreservices = "^12.0"
pyobjc-framework-coremedia = "^12.0"
pyobjc-framework-coreaudio = "^12.0"
pyobjc-framework-avfoundation = "^12.0"
py-applescript = "^1.0.3"
uvloop = "^0.22.1"
zensical = "^0.0.37"
django-ai-boost = "^0.8.0"
fido2 = "^2.1.1"
django-dbtasks = "^0.4.0"
granian = "^2.7.2"
pyopenssl = "^26.0.0"
colorama = "^0.4.6"
wheel = "^0.47.0"
pyscan-rs = "^2.1.2"
mypy = "^2.0.0"
